Fix broken ui due to fontawesome.

--- a/src/themes/lara-light-green/theme.css
+++ b/src/themes/lara-light-green/theme.css
@@ -66,4 +66,6 @@
   --footer-color: var(--buy-pimary-color);
   --title-bar-bg: var(--yellow-500);
   --title-bar: var(--secondary-900);
+  --fa-display: inline-block;
+  --fa-width: 1rem;
 }
